schema/testdata/errors/expressions_compare_model_operand_base_diff_types.keel
model BankAccount {
    fields {
        identity Identity {
            @unique
            @relation(mainAccount)
        }
    }

    actions {
        get getBankAccount(id) {
            //expect-error:34:36:AttributeExpressionError:cannot use operator 'in' with types BankAccount and BankAccount
            @where(!(bankAccount in ctx.identity.mainAccount))
        }
    }
}
